--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
+    "react-tooltip": "^5.26.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
