--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
+    "react-simple-captcha": "^9.3.1",
     "react-tooltip": "^5.26.3",
     "sort-by": "^1.2.0"
   },
