--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "@tanstack/react-query": "^5.22.2",
     "aos": "^3.0.0-beta.6",
+    "firebase": "^10.8.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
