--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.22.1",
     "react-simple-captcha": "^9.3.1",
     "react-tooltip": "^5.26.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
