--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-simple-captcha": "^9.3.1",
+    "react-toastify": "^10.0.4",
     "react-tooltip": "^5.26.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.5"
