--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.6",
     "@tanstack/react-query": "^5.22.2",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.7",
